--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -12,16 +12,15 @@
         android:orientation="vertical"
         android:clickable="true"
         android:focusable="true"
-        android:focusableInTouchMode="true"
-        android:fitsSystemWindows="true">
+        android:focusableInTouchMode="true" >
 
         <android.support.v7.widget.Toolbar
             android:id="@+id/toolbar"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:minHeight="?attr/actionBarSize"
-            app:titleTextColor="@android:color/white"
-            android:background="?attr/colorPrimary" />
+            android:theme="@style/Dark.Overlay"
+            android:elevation="6dp"/>
 
         <include layout="@layout/content_main"
             android:id="@+id/include" />
@@ -34,6 +33,7 @@
         android:layout_height="wrap_content"
         android:layout_gravity="bottom|end"
         android:layout_margin="@dimen/fab_margin"
+        android:elevation="6dp"
         app:srcCompat="@drawable/ic_play_arrow" />
 
 </android.support.design.widget.CoordinatorLayout>
