--- a/app/src/main/res/menu/menu.xml
+++ b/app/src/main/res/menu/menu.xml
@@ -5,10 +5,9 @@
     tools:context=".MainActivity">
 
     <item
-        android:id="@+id/search_btn"
-        android:title="Search"
-        android:orderInCategory="200"
+        android:id="@+id/action_search"
         android:icon="@drawable/ic_open_search"
-        app:showAsAction="ifRoom"
-        />
+        app:showAsAction="collapseActionView|ifRoom"
+        app:actionViewClass="android.support.v7.widget.SearchView"
+        app:queryHint="Search Wikipedia" />
 </menu>
