--- a/app/src/main/res/layout/content_main.xml
+++ b/app/src/main/res/layout/content_main.xml
@@ -14,6 +14,12 @@
         android:layout_height="wrap_content"
         android:indeterminate="true" />
 
+    <ListView
+        android:id="@+id/results"
+        android:visibility="visible"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content" />
+
     <ScrollView
         android:id="@+id/textViewer"
         android:visibility="invisible"
