--- a/app/src/main/res/layout/content_main.xml
+++ b/app/src/main/res/layout/content_main.xml
@@ -14,6 +14,29 @@
         android:layout_height="wrap_content"
         android:indeterminate="true" />
 
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:visibility="gone"
+        android:id="@+id/empty_view"
+        android:orientation="vertical">
+        <ImageView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:src="@drawable/search_icon2"
+            android:layout_gravity="top"
+            android:padding="70dp"/>
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Seems like you haven't searched for anything. Tap the search button to search something."
+            android:textColor="@color/colorAccent"
+            android:textAlignment="center"
+            android:padding="8dp"
+            android:textStyle="bold|italic"
+            android:textAppearance="@android:style/TextAppearance.DeviceDefault.Large"/>
+    </LinearLayout>
+
     <ListView
         android:id="@+id/results"
         android:visibility="visible"
